changes to profile local to be a true local profile

--- a/Sessionweb-AutoTest/pom.xml
+++ b/Sessionweb-AutoTest/pom.xml
@@ -119,7 +119,7 @@
 				<host>localhost</host>
 				<selport>4445</selport>
 				<browser>*firefox</browser>
-				<url>http://devnagios.its.sec.intra/sessionweb/</url>
+				<url>http://localhost/sessionweb/</url>
 			</properties>
 		</profile>
 
