--- a/Sessionweb-AutoTest/pom.xml
+++ b/Sessionweb-AutoTest/pom.xml
@@ -46,7 +46,7 @@
 						<phase>pre-integration-test</phase>
 						<goals>
 							<goal>start-server</goal>
-						</goals>						
+						</goals>
 						<configuration>
 							<background>true</background>
 							<port>${selport}</port>
@@ -99,6 +99,22 @@
 									<name>url</name>
 									<value>${url}</value>
 								</property>
+								<property>
+									<name>mysqlhost</name>
+									<value>${mysqlhost}</value>
+								</property>
+								<property>
+									<name>mysqldb</name>
+									<value>${mysqldb}</value>
+								</property>
+								<property>
+									<name>mysqluser</name>
+									<value>${mysqluser}</value>
+								</property>
+								<property>
+									<name>mysqlpassword</name>
+									<value>${mysqlpassword}</value>
+								</property>
 							</systemProperties>
 
 							<suiteXmlFiles>
@@ -119,27 +135,16 @@
 				<host>localhost</host>
 				<selport>4445</selport>
 				<browser>*firefox</browser>
-				<url>http://localhost/sessionweb/</url>
-			</properties>
-		</profile>
-
-		<profile>
-			<id>remote-ff</id>
-			<properties>
-				<host>172.30.112.138</host>
-				<selport>4444</selport>
-				<browser>*firefox</browser>
-				<url>http://devnagios.its.sec.intra/sessionweb/</url>
-			</properties>
-		</profile>
-		<profile>
-			<id>remote-chrome</id>
-			<properties>
-				<host>172.30.112.138</host>
-				<selport>4444</selport>
-				<browser>*chrome</browser>
-				<url>http://devnagios.its.sec.intra/sessionweb/</url>
+				<url>http://localhost</url>
+				<mysqlhost>localhost</mysqlhost>
+				<mysqldb>sessionwebos</mysqldb>
+				<mysqluser>sessionwebadmin</mysqluser>
+				<mysqlpassword>123456</mysqlpassword>
 			</properties>
 		</profile>
 	</profiles>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
