--- a/Sessionweb-AutoTest/pom.xml
+++ b/Sessionweb-AutoTest/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.14</version>
         </dependency>
+        <dependency>
+            <groupId>de.sven-jacobs</groupId>
+            <artifactId>loremipsum</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
